[gd_scene load_steps=16 format=3 uid="uid://n7b22gsfb5k4"]

[ext_resource type="Script" path="res://scenes/levels/level_001/level_001.gd" id="1_x6kct"]
[ext_resource type="PackedScene" uid="uid://cuwqfswhhwydl" path="res://actor/character/player.tscn" id="2_e0hu8"]
[ext_resource type="TileSet" uid="uid://bfa5r8i4tfujl" path="res://scenes/levels/TileSets/Station/station001.tres" id="2_j2q0w"]
[ext_resource type="PackedScene" uid="uid://beveh35ahb7r8" path="res://actor/object/automatic_door.tscn" id="3_tja8i"]
[ext_resource type="PackedScene" uid="uid://dtfkbntqcc3g4" path="res://scenes/hud.tscn" id="4_0bxgj"]
[ext_resource type="PackedScene" uid="uid://b7qi3o4l0pd5n" path="res://scenes/camera/MapCamera.tscn" id="4_vfw2e"]
[ext_resource type="PackedScene" uid="uid://dwte2ktuntb4g" path="res://actor/object/clock.tscn" id="5_8dtar"]
[ext_resource type="PackedScene" uid="uid://vrk5qsnxlfvw" path="res://actor/object/ticket_machine.tscn" id="6_qfs7o"]
[ext_resource type="PackedScene" uid="uid://do3lpklchqx5t" path="res://actor/actionable.tscn" id="8_0yq42"]
[ext_resource type="PackedScene" uid="uid://bhyrsrva7afmq" path="res://actor/object/train.tscn" id="8_8c11q"]
[ext_resource type="Resource" uid="uid://e7okloxln2p6" path="res://scenes/levels/level_001/level_001.dialogue" id="9_e28o4"]
[ext_resource type="AudioStream" uid="uid://dqyo1rtbm1mej" path="res://audio/ticket.wav" id="9_wl4bs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ny0pw"]
size = Vector2(24, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcer0"]
size = Vector2(88, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pn0f8"]
size = Vector2(376, 24)

[node name="Level01" type="Node2D"]
script = ExtResource("1_x6kct")

[node name="Wall&Floor" type="TileMap" parent="."]
tile_set = ExtResource("2_j2q0w")
format = 2
layer_0/name = "Ground&Wall"
layer_0/tile_data = PackedInt32Array(1, 327681, 7, 65536, 327681, 7, 131072, 327681, 7, 196608, 327681, 7, 262144, 327681, 0, 327680, 327681, 5, 393216, 327681, 4, 458752, 327681, 5, 524288, 327681, 5, 589824, 327681, 5, 655360, 327681, 5, 720896, 327681, 5, 786432, 327681, 5, 851968, 327681, 5, 917504, 327681, 5, 983040, 327681, 5, 1048576, 327681, 5, 1114112, 327681, 5, 1179648, 327681, 5, 1245184, 327681, 5, 1310720, 327681, 3, 0, 327681, 7, 65537, 327681, 7, 1310721, 589825, 3, 1245185, 327681, 7, 1179649, 327681, 7, 1114113, 327681, 7, 1048577, 327681, 7, 983041, 327681, 7, 917505, 327681, 7, 851969, 327681, 7, 786433, 458753, 7, 720897, 327681, 7, 655361, 327681, 7, 589825, 327681, 7, 524289, 458753, 7, 458753, 327681, 7, 393217, 327681, 7, 327681, 327681, 7, 262145, 458753, 0, 196609, 327681, 7, 131073, 327681, 7, 1310722, 589825, 3, 1376258, 327681, 7, 1310723, 589825, 3, 1376259, 327681, 7, 1310724, 589825, 3, 1376260, 327681, 7, 1310725, 589825, 3, 1376261, 393217, 7, 1310726, 589825, 3, 1376262, 327681, 7, 1310727, 589825, 3, 1376263, 327681, 7, 1310728, 589825, 3, 1376264, 327681, 7, 1310729, 589825, 3, 1376265, 327681, 7, 1310730, 327681, 7, 1376266, 327681, 7, 1310731, 327681, 7, 1376267, 327681, 7, 1310732, 589825, 3, 1376268, 327681, 7, 1310733, 589825, 3, 1376269, 327681, 7, 1310734, 589825, 3, 1376270, 327681, 7, 1310735, 589825, 3, 1376271, 327681, 7, 1310736, 589825, 3, 1376272, 327681, 7, 262161, 524289, 0, 1310737, 589825, 3, 1376273, 327681, 7, 1310738, 589825, 3, 1376274, 327681, 7, 1310739, 589825, 3, 1376275, 327681, 7, 2, 327681, 7, 65538, 327681, 7, 131074, 327681, 7, 196610, 327681, 7, 3, 393217, 7, 65539, 327681, 7, 131075, 327681, 7, 196611, 327681, 7, 4, 327681, 7, 65540, 327681, 7, 131076, 327681, 7, 196612, 327681, 7, 5, 327681, 7, 65541, 327681, 7, 131077, 327681, 7, 196613, 327681, 7, 6, 327681, 7, 65542, 327681, 7, 131078, 327681, 7, 196614, 327681, 7, 7, 327681, 7, 65543, 327681, 7, 131079, 458753, 7, 196615, 327681, 7, 8, 327681, 7, 65544, 327681, 7, 131080, 327681, 7, 196616, 327681, 7, 9, 524289, 7, 65545, 327681, 7, 131081, 327681, 7, 196617, 327681, 7, 10, 393217, 7, 65546, 327681, 7, 131082, 327681, 7, 196618, 327681, 7, 11, 327681, 7, 65547, 327681, 7, 131083, 327681, 7, 196619, 327681, 7, 12, 327681, 7, 65548, 327681, 7, 131084, 327681, 7, 196620, 327681, 7, 13, 327681, 7, 65549, 327681, 7, 131085, 327681, 7, 196621, 327681, 7, 14, 327681, 7, 65550, 327681, 7, 131086, 327681, 7, 196622, 327681, 7, 15, 327681, 7, 65551, 327681, 7, 131087, 327681, 7, 196623, 327681, 7, 16, 327681, 7, 65552, 327681, 7, 131088, 327681, 7, 196624, 327681, 7, 17, 327681, 7, 65553, 327681, 7, 131089, 327681, 7, 196625, 327681, 7, 18, 327681, 7, 65554, 327681, 7, 131090, 327681, 7, 196626, 327681, 7, 19, 327681, 7, 65555, 327681, 7, 131091, 327681, 7, 196627, 327681, 7, 20, 327681, 7, 65556, 327681, 7, 131092, 327681, 7, 196628, 327681, 7, 21, 327681, 7, 65557, 327681, 7, 131093, 327681, 7, 196629, 327681, 7, 262160, 327681, 7, 262159, 327681, 7, 262158, 458753, 0, 262157, 524289, 0, 262156, 524289, 0, 262155, 524289, 0, 262154, 524289, 0, 262153, 524289, 0, 262152, 327681, 7, 262151, 327681, 7, 262150, 524289, 0, 262149, 524289, 0, 262148, 524289, 0, 262147, 524289, 0, 262146, 524289, 0, 1572866, 589825, 3, 1572867, 589825, 3, 1572868, 589825, 3, 1572869, 524289, 3, 1572870, 589825, 3, 1572871, 589825, 3, 1572872, 589825, 3, 1572873, 589825, 3, 1572874, 589825, 3, 1572875, 589825, 3, 1572876, 589825, 3, 1572877, 589825, 3, 1572878, 458753, 3, 1572879, 589825, 3, 1572880, 589825, 3, 1572881, 589825, 3, 1572882, 589825, 3, 1572883, 589825, 3, 1572864, 589825, 3, 1572865, 589825, 3, 1441794, 327681, 7, 1507330, 327681, 7, 1441795, 327681, 7, 1507331, 327681, 7, 1441796, 327681, 7, 1507332, 327681, 7, 1441797, 327681, 7, 1507333, 327681, 7, 1441798, 327681, 7, 1507334, 327681, 7, 1441799, 327681, 7, 1507335, 327681, 7, 1441800, 327681, 7, 1507336, 327681, 7, 1441801, 327681, 7, 1507337, 327681, 7, 1441802, 327681, 7, 1507338, 327681, 7, 1441803, 327681, 7, 1507339, 327681, 7, 1441804, 327681, 7, 1507340, 327681, 7, 1441805, 327681, 7, 1507341, 327681, 7, 1441806, 327681, 7, 1507342, 327681, 7, 1441807, 327681, 7, 1507343, 327681, 7, 1441808, 327681, 7, 1507344, 327681, 7, 1441809, 327681, 7, 1507345, 327681, 7, 1441810, 327681, 7, 1507346, 327681, 7, 1441811, 327681, 7, 1507347, 327681, 7, 1376256, 327681, 7, 1441792, 327681, 7, 1507328, 327681, 7, 1376257, 327681, 7, 1441793, 327681, 7, 1507329, 327681, 7, 1376255, 327681, 5, 1441791, 327681, 5, 1507327, 327681, 5, 1572863, 327681, 5, 1638399, 327681, 5, 327682, 327681, 7, 393219, 458753, 7, 393220, 327681, 7, 458756, 327681, 7, 458757, 327681, 7, 524294, 327681, 7, 524295, 327681, 7, 589832, 393217, 7, 589833, 327681, 7, 655369, 327681, 7, 655370, 327681, 7, 655371, 327681, 7, 720907, 327681, 7, 720908, 327681, 7, 786444, 327681, 7, 786445, 327681, 7, 786446, 327681, 7, 720913, 524289, 5, 720912, 393217, 3, 720911, 327681, 3, 655375, 327681, 0, 655374, 327681, 7, 655373, 327681, 7, 786443, 327681, 7, 720910, 327681, 7, 589838, 327681, 7, 589837, 327681, 7, 589836, 327681, 7, 655372, 327681, 7, 720906, 327681, 7, 786441, 327681, 7, 851977, 327681, 7, 917514, 327681, 7, 983051, 327681, 7, 983052, 327681, 7, 983053, 327681, 7, 983054, 327681, 7, 983055, 393217, 7, 917520, 327681, 7, 917521, 524289, 5, 655377, 524289, 5, 655376, 393217, 0, 720909, 327681, 7, 851980, 327681, 7, 851979, 327681, 7, 917515, 327681, 7, 983056, 327681, 7, 983057, 524289, 5, 1048590, 458753, 7, 1048591, 327681, 7, 1048592, 327681, 7, 1048593, 524289, 5, 786449, 524289, 4, 786448, 327681, 7, 851984, 327681, 7, 524305, 524289, 5, 589840, 327681, 7, 851981, 327681, 7, 917517, 327681, 7, 524304, 327681, 7, 524303, 327681, 7, 524302, 327681, 7, 524301, 327681, 7, 524300, 327681, 7, 524299, 327681, 7, 589835, 327681, 7, 589834, 327681, 7, 655368, 393217, 0, 720904, 393217, 3, 720903, 327681, 3, 786439, 327681, 7, 786438, 327681, 7, 851974, 327681, 7, 917510, 327681, 7, 917511, 327681, 7, 983048, 327681, 7, 983049, 327681, 7, 983050, 327681, 7, 851978, 327681, 7, 851976, 327681, 7, 851975, 327681, 7, 983046, 327681, 7, 1048582, 327681, 7, 1048583, 327681, 7, 1114119, 327681, 7, 1114120, 327681, 7, 1114121, 327681, 7, 1114122, 327681, 7, 1114123, 327681, 7, 1048587, 327681, 7, 917513, 327681, 7, 917512, 327681, 7, 983045, 327681, 7, 1048581, 327681, 7, 1114117, 393217, 7, 1114118, 327681, 7, 1114116, 327681, 7, 1048580, 327681, 7, 1048579, 327681, 7, 1048578, 327681, 7, 983042, 327681, 7, 917506, 327681, 7, 917507, 327681, 7, 851971, 327681, 7, 786435, 327681, 7, 720899, 327681, 7, 655363, 327681, 7, 655364, 327681, 7, 589828, 327681, 7, 720900, 327681, 7, 786436, 327681, 7, 851972, 458753, 7, 983043, 327681, 7, 393218, 327681, 7, 458754, 327681, 7, 524290, 327681, 7, 589826, 327681, 7, 655362, 327681, 7, 720898, 327681, 7, 786434, 458753, 7, 851970, 327681, 7, 1114114, 327681, 7, 1179650, 327681, 7, 1245186, 327681, 7, 327683, 327681, 7, 458755, 327681, 7, 524291, 327681, 7, 589827, 327681, 7, 1114115, 327681, 7, 1179651, 327681, 7, 1245187, 327681, 7, 327684, 327681, 7, 524292, 327681, 7, 917508, 327681, 7, 983044, 327681, 7, 1179652, 327681, 7, 1245188, 327681, 7, 327685, 327681, 7, 393221, 327681, 7, 524293, 327681, 7, 589829, 327681, 7, 655365, 327681, 7, 720901, 327681, 7, 786437, 327681, 7, 851973, 327681, 7, 917509, 327681, 7, 1179653, 327681, 7, 1245189, 327681, 7, 327686, 327681, 7, 393222, 327681, 7, 458758, 327681, 7, 589830, 327681, 7, 655366, 327681, 7, 720902, 327681, 7, 1179654, 327681, 7, 1245190, 327681, 7, 327687, 327681, 7, 393223, 327681, 7, 458759, 327681, 7, 589831, 327681, 7, 655367, 327681, 0, 983047, 327681, 7, 1179655, 327681, 7, 1245191, 327681, 7, 327688, 327681, 7, 393224, 327681, 7, 458760, 327681, 7, 524296, 327681, 7, 786440, 327681, 7, 1048584, 327681, 7, 1179656, 327681, 7, 1245192, 327681, 7, 327689, 327681, 7, 393225, 327681, 7, 458761, 327681, 7, 524297, 327681, 7, 720905, 524289, 7, 1048585, 327681, 7, 1179657, 327681, 7, 1245193, 327681, 7, 327690, 327681, 7, 393226, 327681, 7, 458762, 327681, 7, 524298, 327681, 7, 786442, 327681, 7, 1048586, 327681, 7, 1179658, 327681, 7, 1245194, 327681, 7, 327691, 327681, 7, 393227, 327681, 7, 458763, 327681, 7, 1179659, 327681, 7, 1245195, 393217, 7, 327692, 327681, 7, 393228, 327681, 7, 458764, 327681, 7, 917516, 327681, 7, 1048588, 327681, 7, 1114124, 327681, 7, 1179660, 327681, 7, 1245196, 327681, 7, 327693, 327681, 7, 393229, 327681, 7, 458765, 327681, 7, 1048589, 327681, 7, 1114125, 327681, 7, 1179661, 327681, 7, 1245197, 327681, 7, 327694, 327681, 7, 393230, 327681, 7, 458766, 327681, 7, 851982, 327681, 7, 917518, 327681, 7, 1114126, 327681, 7, 1179662, 327681, 7, 1245198, 327681, 7, 327695, 327681, 7, 393231, 327681, 7, 458767, 327681, 7, 589839, 327681, 7, 786447, 327681, 7, 851983, 327681, 7, 917519, 327681, 7, 1114127, 327681, 7, 1179663, 327681, 7, 1245199, 327681, 7, 327696, 327681, 7, 393232, 327681, 7, 458768, 327681, 7, 1114128, 458753, 7, 1179664, 327681, 7, 1245200, 327681, 7, 327697, 524289, 5, 393233, 524289, 4, 458769, 524289, 5, 589841, 524289, 5, 851985, 524289, 5, 1114129, 524289, 5, 1179665, 524289, 5, 1245201, 524289, 4, 65535, 327681, 5, 131071, 327681, 5, 196607, 327681, 5, 262143, 327681, 5, 327679, 327681, 5, 262162, 524289, 0, 262163, 524289, 0, 262164, 524289, 0, 262165, 524289, 0, 1310740, 589825, 3, 1376276, 327681, 7, 1441812, 327681, 7, 1507348, 327681, 7, 1572884, 589825, 3, 1310741, 589825, 3, 1376277, 327681, 7, 1441813, 327681, 7, 1507349, 327681, 7, 1572885, 589825, 3, 1310742, 393217, 0, 1376278, 524289, 5, 1441814, 524289, 4, 1507350, 524289, 4, 1572886, 524289, 5, 22, 327681, 5, 65558, 327681, 5, 131094, 327681, 5, 196630, 327681, 5, 262166, 393217, 3)
layer_1/name = "Floor"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(65536, 1, 3, 65537, 1, 3, 65538, 1, 3, 65539, 1, 3, 65540, 1, 3, 65541, 1, 3, 65542, 1, 3, 65543, 1, 3, 65544, 1, 3, 65545, 1, 3, 65546, 1, 3, 65547, 1, 3, 65548, 1, 3, 65549, 1, 3, 65550, 1, 3, 65551, 1, 3, 65552, 1, 3, 65553, 1, 3, 65554, 1, 3, 65555, 1, 3, 65556, 1, 3, 65557, 1, 3)

[node name="Player" parent="." instance=ExtResource("2_e0hu8")]
z_index = 2
position = Vector2(40, 717)
initial_orientation = Vector2(1, 2.08165e-12)

[node name="MapCamera" parent="Player" node_paths=PackedStringArray("tileMap") instance=ExtResource("4_vfw2e")]
tileMap = NodePath("../../Wall&Floor")
metadata/_edit_lock_ = true

[node name="AutomaticDoor_enter" parent="." instance=ExtResource("3_tja8i")]
position = Vector2(352, 656)

[node name="AutomaticDoor_toDock_left" parent="." instance=ExtResource("3_tja8i")]
position = Vector2(256, 144)
is_locked = true

[node name="AutomaticDoor_toDock_right" parent="." instance=ExtResource("3_tja8i")]
position = Vector2(512, 144)
is_locked = true

[node name="HUD" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_0bxgj")]
player = NodePath("../Player")

[node name="TicketMachine" parent="." instance=ExtResource("6_qfs7o")]
position = Vector2(380, 160)

[node name="Actionnable" parent="TicketMachine" instance=ExtResource("8_0yq42")]
dialogueResource = ExtResource("9_e28o4")
dialogueStart = "ticket_machine"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TicketMachine/Actionnable"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_ny0pw")
metadata/_edit_lock_ = true

[node name="Clock" parent="." instance=ExtResource("5_8dtar")]
position = Vector2(408, 128)
start_minutes = 57
end_hours = 10
end_minutes = 0

[node name="Train" parent="." node_paths=PackedStringArray("leaving_destination") instance=ExtResource("8_8c11q")]
z_index = 1
position = Vector2(392, 48)
leaving_destination = NodePath("../TrainLeavingDestionation")
speed = 100

[node name="ActionnableLocomotive" parent="Train" instance=ExtResource("8_0yq42")]
dialogueResource = ExtResource("9_e28o4")
dialogueStart = "locomotive"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Train/ActionnableLocomotive"]
position = Vector2(-192, 0)
shape = SubResource("RectangleShape2D_mcer0")

[node name="ActionnableWagon" parent="Train" instance=ExtResource("8_0yq42")]
dialogueResource = ExtResource("9_e28o4")
dialogueStart = "wagon"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Train/ActionnableWagon"]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_pn0f8")

[node name="TicketAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_wl4bs")

[node name="TrainLeavingDestionation" type="Node2D" parent="."]
position = Vector2(-512, 48)

[connection signal="on_player_enter" from="AutomaticDoor_toDock_left" to="." method="_on_player_enter_in_doors_to_dock"]
[connection signal="on_player_enter" from="AutomaticDoor_toDock_right" to="." method="_on_player_enter_in_doors_to_dock"]
[connection signal="timeout" from="Clock" to="." method="_on_clock_timeout"]
[connection signal="body_entered" from="Train/ActionnableWagon" to="." method="_on_train_wagons_entered"]
